--- a/PhoneStore_MVC/Views/Home/GetProductByManufacture.cshtml
+++ b/PhoneStore_MVC/Views/Home/GetProductByManufacture.cshtml
@@ -4,7 +4,7 @@
 
 @model PagedList.IPagedList<PhoneStore_MVC.Models.tDienThoaiViewModel>
 @{
-    ViewBag.Title = "Iphone";
+    ViewBag.Title = "GetProductByManufacture";
     Layout = "~/Views/Shared/_LayoutHome.cshtml";
 }
 
